--- a/src/components/collections/CollectionVideoSection.css
+++ b/src/components/collections/CollectionVideoSection.css
@@ -9,7 +9,7 @@
 .video-background {
   width: 100%;
   height: 100%;
-  background: lightgray url('/collections/orient.gif') no-repeat fixed center / cover;
+  background: lightgray url('/collections/orient.gif') no-repeat center / cover;
   position: relative;
 }
 
