--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -291,7 +291,7 @@
   /* regular */
   line-height: 1;
   /* 120% */
-  letter-spacing: 0;
+  letter-spacing: 1.3;
   /* 0% */
   margin-bottom: 0;
   /* List spacing = 0 */
@@ -310,18 +310,32 @@
 
 .heading-2--no-margin {
   font-family: var(--font-saol);
+  font-size: 64px;
+  font-style: italic;
+  font-weight: 300;
+  /* regular */
+  line-height: 0.9;
+  /* 90% */
+  letter-spacing: -0.02em;
+  /* 0% */
+}
+
+.heading-3--no-margin {
+  font-family: var(--font-saol);
   font-size: 24px;
   font-weight: 400;
+  /* regular */
   line-height: 0.9;
+  /* 90% */
   letter-spacing: 0;
-  margin: 0;
+  /* 0% */
 }
 
 .bodytext-1--no-margin {
   font-family: var(--font-bt-beau-sans);
   font-size: 20px;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0;
   margin: 0;
 }
@@ -330,7 +344,7 @@
   font-family: var(--font-bt-beau-sans);
   font-size: 16px;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0;
   margin: 0;
 }
@@ -339,7 +353,7 @@
   font-family: var(--font-bt-beau-sans);
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0;
   margin: 0;
 }
@@ -348,7 +362,7 @@
   font-family: var(--font-bt-beau-sans);
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.3;
   letter-spacing: 0;
   margin: 0;
 }
@@ -358,7 +372,16 @@
   font-size: 14px;
   font-weight: 400;
   font-style: italic;
-  line-height: 1.2;
+  line-height: 1.3;
+  letter-spacing: 0;
+  margin: 0;
+}
+
+.bodytext-6--no-margin {
+  font-family: var(--font-bt-beau-sans);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.3;
   letter-spacing: 0;
   margin: 0;
 }
